# grcar_eigens

./: CMakeLists.txt
apps/: CMakeLists.txt  test_grcar_eigens.cpp
include/: eigens.h
src/: CMakeLists.txt  eigens.cpp
visualization/: plotComplex.m  readComplexFile.m
